--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,6 +650,8 @@ section {
 
 .portfolio .portfolio-item img{
   max-height: 500px;
+  max-width:100%;
+  max-height:100%;
 }
 
 .portfolio .portfolio-item img:hover{
