--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -661,12 +661,9 @@ section {
 }
 
 
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
-# Footer
+# /Contact us/ Footer
 --------------------------------------------------------------*/
 #footer {
   background: #fff;
@@ -678,7 +675,7 @@ section {
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #fff;
+  background: #16431433;
 }
 
 #footer .footer-top .footer-contact {
