--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/Elmerlandscaping/assets/img/hero-bg.jpg") top left;
+  background: url("/Elmerlandscaping/assets/img/hero-bg.png") top left;
   background-size: cover;
   position: relative;
 }
@@ -649,9 +649,10 @@ section {
 }
 
 .portfolio .portfolio-item img{
-  max-height: 500px;
   max-width:100%;
   max-height:100%;
+  max-height: 500px;
+
 }
 
 .portfolio .portfolio-item img:hover{
